--- a/Servers/ManifestInfoList.json
+++ b/Servers/ManifestInfoList.json
@@ -20,7 +20,7 @@
       "PUNAppIDOffset": 165303984,
       "VoiceAppIDOffset": 165304024
     },
-    "RequiresRecNet": true,
+    "RequiresRecNet": false,
     "ServerName": "RecNet2018"
   }
 ]
